--- a/Node-API/package.json
+++ b/Node-API/package.json
@@ -10,7 +10,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "qrcode": "^1.5.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
